fix(scene): fade timing, z-index

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -256,7 +256,7 @@ d-text {
   position: absolute;
   right: 0;
   top: 0;
-  transition: opacity .5s linear;
+  transition: opacity .25s linear;
   z-index: 1;
 
   &--visible {
